--- a/security/ssl-admin/Makefile
+++ b/security/ssl-admin/Makefile
@@ -1,32 +1,27 @@
 PORTNAME=	ssl-admin
-DISTVERSIONPREFIX=	v
 DISTVERSION=	1.3.0
+PORTREVISION=	1
 CATEGORIES=	security
+MASTER_SITES=	https://github.com/ecrist/${PORTNAME}/releases/download/v${DISTVERSION}/
 
 MAINTAINER=	ecrist@secure-computing.net
 COMMENT=	OpenSSL certificate manager with OpenVPN support
 WWW=		https://github.com/ecrist/ssl-admin/
 
 LICENSE=	BSD3CLAUSE
-LICENSE_FILE=	${WRKSRC}/../LICENSE
-
-RUN_DEPENDS=	zip:archivers/zip
 
 USES=		perl5 shebangfix tar:xz
-USE_GITHUB=	yes
-GH_ACCOUNT=	ecrist
 USE_PERL5=	run
 
 SHEBANG_FILES=	ssl-admin
 
-GNU_CONFIGURE=	yes
+HAS_CONFIGURE=	yes
 
-MAKE_ENV=	ETCDIR=${PREFIX}/etc BINDIR=${PREFIX}/bin \
+MAKE_ENV=	BINDIR=${PREFIX}/bin \
+		ETCDIR=${PREFIX}/etc \
 		MANDIR=${MANPREFIX}/man
 NO_ARCH=	yes
 SUB_FILES=	pkg-message
-
-WRKSRC_SUBDIR=	perl
 
 post-patch:
 	${REINPLACE_CMD} -e 's|`which sed`|${SED}|' ${WRKSRC}/configure
