devel/py-chai: Easy to use mocking, stubbing and spying framework
Chai provides a very easy to use api for mocking, stubbing and spying
your python objects, patterned after the Mocha library for Ruby.

This port is required for KDE's CI builders.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4441,6 +4441,7 @@
     SUBDIR += py-cfgv
     SUBDIR += py-cfn-lint
     SUBDIR += py-cftime
+    SUBDIR += py-chai
     SUBDIR += py-chainmap
     SUBDIR += py-characteristic
     SUBDIR += py-check-jsonschema
