devel/py-all-repos: Add py-all-repos 1.26.0
all-repos clones all your repositories and apply sweeping changes.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4215,6 +4215,7 @@
     SUBDIR += py-aiorwlock
     SUBDIR += py-aiosignal
     SUBDIR += py-airtable-python-wrapper
+    SUBDIR += py-all-repos
     SUBDIR += py-amalgamate
     SUBDIR += py-aniso8601
     SUBDIR += py-aniso86016
