devel/py-contextlib-chdir: Add py-contextlib-chdir 1.0.2
contextlib-chdir provides the backport of contextlib.chdir stdlib class added in
Python 3.11.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4503,6 +4503,7 @@
     SUBDIR += py-constantly
     SUBDIR += py-construct
     SUBDIR += py-construct-classes
+    SUBDIR += py-contextlib-chdir
     SUBDIR += py-contextlib2
     SUBDIR += py-convertdate
     SUBDIR += py-cookiecutter
