textproc/py-tiktoken: Add py-tiktoken 0.4.0
tiktoken is a fast BPE tokeniser for use with OpenAI's models.

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1593,6 +1593,7 @@
     SUBDIR += py-texttable
     SUBDIR += py-textual
     SUBDIR += py-three-merge
+    SUBDIR += py-tiktoken
     SUBDIR += py-tinycss
     SUBDIR += py-tinycss2
     SUBDIR += py-toml
