devel/rubygem-ruby-lsp: Add rubygem-ruby-lsp 0.8.1
The Ruby LSP is an implementation of the language server protocol for Ruby, used
to improve rich features in editors. It is a part of a wider goal to provide a
state-of-the-art experience to Ruby developers using modern standards for
cross-editor features, documentation and debugging.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7270,6 +7270,7 @@
     SUBDIR += rubygem-ruby-filemagic
     SUBDIR += rubygem-ruby-fogbugz
     SUBDIR += rubygem-ruby-libvirt
+    SUBDIR += rubygem-ruby-lsp
     SUBDIR += rubygem-ruby-macho
     SUBDIR += rubygem-ruby-magic
     SUBDIR += rubygem-ruby-ole
