devel/rubygem-prettier_print: Add rubygem-prettier_print 1.2.1
PrettierPrint is a drop-in replacement for the prettyprint gem with more
functionality.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7153,6 +7153,7 @@
     SUBDIR += rubygem-powerpack
     SUBDIR += rubygem-pp
     SUBDIR += rubygem-pqueue
+    SUBDIR += rubygem-prettier_print
     SUBDIR += rubygem-prettyprint
     SUBDIR += rubygem-profile
     SUBDIR += rubygem-progressbar
