devel/rubygem-ruby_memcheck: Add rubygem-ruby_memcheck 2.1.1
ruby_memcheck provides a sane way to use Valgrind's memcheck on your native
extension gem.

Valgrind's memcheck is a great tool to find and debug memory issues (e.g. memory
leak, use-after-free, etc.). However, it doesn't work well on Ruby because Ruby
does not free all of the memory it allocates during shutdown. This results in
Valgrind reporting thousands (or more) false positives, making it very difficult
for Valgrind to actually be useful. This gem solves the problem by using
heuristics to filter out false positives.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7281,6 +7281,7 @@
     SUBDIR += rubygem-ruby2_keywords
     SUBDIR += rubygem-ruby2ruby
     SUBDIR += rubygem-ruby_dep
+    SUBDIR += rubygem-ruby_memcheck
     SUBDIR += rubygem-ruby_parser
     SUBDIR += rubygem-rubygems-mirror
     SUBDIR += rubygem-rubygems-tasks
