devel/rubygem-sorbet-runtime: Add rubygem-sorbet-runtime 0.5.10969
Sorbet is a fast and powerful type checker designed for Ruby. It aims to be easy
to add to existing codebases with gradual types, and fast to respond with errors
and suggestions.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7351,6 +7351,7 @@
     SUBDIR += rubygem-snowplow-tracker
     SUBDIR += rubygem-soap4r
     SUBDIR += rubygem-solve
+    SUBDIR += rubygem-sorbet-runtime
     SUBDIR += rubygem-sorted_set
     SUBDIR += rubygem-spring
     SUBDIR += rubygem-spring-watcher-listen
