textproc/rubygem-yarp: Add rubygem-yarp 0.6.0
Yet Another Ruby Parser is a parser for the Ruby programming language. It is
designed to be portable, error tolerant, and maintainable. It is written in C99
and has no dependencies. It is currently being integrated into CRuby, JRuby,
TruffleRuby, Sorbet, and Syntax Tree.

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1901,6 +1901,7 @@
     SUBDIR += rubygem-ya2yaml
     SUBDIR += rubygem-yard
     SUBDIR += rubygem-yard-chef
+    SUBDIR += rubygem-yarp
     SUBDIR += rubygem-zmq
     SUBDIR += rw-aspell
     SUBDIR += rxp
