--- a/devel/py-dask/Makefile
+++ b/devel/py-dask/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	dask
-PORTVERSION=	2023.7.1
+PORTVERSION=	2023.8.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -9,7 +9,7 @@ COMMENT=	Parallel PyData with Task Scheduling
 WWW=		https://dask.org/ \
 		https://github.com/dask/dask
 
-LICENSE=	BSD4CLAUSE
+LICENSE=	BSD3CLAUSE
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=62.6:devel/py-setuptools@${PY_FLAVOR} \
@@ -38,11 +38,11 @@ CPE_VENDOR=	anaconda
 OPTIONS_DEFINE=	ARRAY DATAFRAME DIAGNOSTICS
 ARRAY_DESC=	Subset of the NumPy ndarray interface
 DATAFRAME_DESC=	Composed of many smaller Pandas DataFrames
+DATAFRAME_IMPLIES=	ARRAY
 DIAGNOSTICS_DESC=	Profile and inspect parallel codes
 
 ARRAY_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}numpy>=1.21,1:math/py-numpy@${PY_FLAVOR} \
-DATAFRAME_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}numpy>=1.21,1:math/py-numpy@${PY_FLAVOR} \
-			${PYTHON_PKGNAMEPREFIX}pandas>=1.3,1:math/py-pandas@${PY_FLAVOR}
+DATAFRAME_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pandas>=1.3,1:math/py-pandas@${PY_FLAVOR}
 DIAGNOSTICS_RUN_DEPENDS=${PYTHON_PKGNAMEPREFIX}bokeh>=2.4.2<3:www/py-bokeh@${PY_FLAVOR} \
 			${PYTHON_PKGNAMEPREFIX}Jinja2>=2.10.3:devel/py-Jinja2@${PY_FLAVOR}
 
