--- a/devel/py-rpds-py/Makefile
+++ b/devel/py-rpds-py/Makefile
@@ -1,8 +1,8 @@
 PORTNAME=	rpds-py
-PORTVERSION=	0.7.1
-PORTREVISION=	1
+PORTVERSION=	0.8.10
 CATEGORIES=	devel python
-MASTER_SITES=	PYPI
+MASTER_SITES=	PYPI \
+		https://github.com/crate-py/rpds/releases/download/v${PORTVERSION}/
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTFILES=	rpds_py-${PORTVERSION}${EXTRACT_SUFX}
 
@@ -13,7 +13,7 @@ WWW=		https://github.com/crate-py/rpds
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}maturin>=0.14:devel/py-maturin@${PY_FLAVOR}
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}maturin>=1<2:devel/py-maturin@${PY_FLAVOR}
 
 USES=		cargo dos2unix python
 USE_PYTHON=	autoplist concurrent pep517
