www/trunk: New port: Build, bundle & ship your Rust WASM application to the web

--- a/www/Makefile
+++ b/www/Makefile
@@ -2327,6 +2327,7 @@
     SUBDIR += trafficserver
     SUBDIR += transmission-web
     SUBDIR += transproxy
+    SUBDIR += trunk
     SUBDIR += tt-rss
     SUBDIR += tuifeed
     SUBDIR += tusc
