sysutils/bacula*-server: set rc.d REQUIRES
Correctly set the REQUIRES for bacula-dir to one of:
* mysql
* postgresql

This setting was lost sometime after bacula5-server

While here, remove a space within files/bacula-dir.in so the resulting
REQUIRES contains only one space.

PR:		273296

--- a/sysutils/bacula9-server/Makefile
+++ b/sysutils/bacula9-server/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	bacula
 PORTVERSION=	9.6.7
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES?=	sysutils
 MASTER_SITES=	SF/bacula/bacula/${PORTVERSION}
 PKGNAMEPREFIX?=	#
@@ -92,7 +92,7 @@ BACULA_DIR?=	/var/db/bacula
 
 PLIST_SUB+=	BACULA_DIR=${BACULA_DIR}
 
-SUB_LIST=	BACULA_USER=${BACULA_USER} \
+SUB_LIST+=	BACULA_USER=${BACULA_USER} \
 		BACULA_GROUP=${BACULA_GROUP} \
 		BACULA_UID=${BACULA_UID} \
 		BACULA_GID=${BACULA_GID} \
@@ -115,10 +115,12 @@ CONFFILES=		sd dir
 
 MYSQL_CONFIGURE_ON=	--with-mysql=yes
 MYSQL_USES=		mysql
+MYSQL_SUB_LIST+=	REQ_MYSQL=mysql REQ_PGSQL=""
 SQLITE3_CONFIGURE_ON=	--with-sqlite3=yes
 SQLITE3_USES=		sqlite:3
 PGSQL_CONFIGURE_ON=	--with-postgresql=yes
 PGSQL_USES=		pgsql
+PGSQL_SUB_LIST+=	REQ_MYSQL="" REQ_PGSQL=postgresql
 
 MTX_RUN_DEPENDS=	${LOCALBASE}/sbin/mtx:misc/mtx
 
