security/zeek: Update to 6.0.0
    https://github.com/zeek/zeek/releases/tag/v6.0.0

This is the latest major version number Long-Term Support (LTS)
release of Zeek.

The NETMAP option has been removed; it was too difficult to build
it without zeek being installed in %%PREFIX%%. The consensus was
that this was a rarely used feature, please reach out to me if need
this (I've done some work on a new security/zeek-netmap port that
is probably the right way forward).

When I upgraded zeek on my systems I found some cruft left over
from previous versions. The way I recommend upgrading from 5.0.9
to 6.0.0 is:

    service zeek stop
    pkg delete -fy zeek py311-zkg
    [clean up leftover files in /usr/local/lib/zeek]
    pkg install -y zeek
    service zeek deploy

Changes:

 - Zeek now treats private address space (i.e., non-routable IP
   address ranges) as local by default

 - Telemetry centralization and Prometheus exposition is not enabled
   by default anymore

 - Custom source tarballs require a repo-info.json file.

 - Plugin authors should raise the minimum required CMake version
   to 3.15 to ensure compatibility with new CMake scaffolding
   included in this release

 - Zeek container images are not pushed to the zeekurity organization
   anymore

 - The error message returned when using bro_init, bro_done, and
   bro_script_loaded events is now removed

Reported by:	Tim Wojtulewicz

--- a/security/zeek/Makefile
+++ b/security/zeek/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	zeek
-DISTVERSION=	5.0.9
+DISTVERSION=	6.0.0
 CATEGORIES=	security
 MASTER_SITES=	https://download.zeek.org/
 DISTFILES=	${DISTNAME}${EXTRACT_SUFX}
@@ -20,7 +20,7 @@ LIB_DEPENDS=	libcares.so:dns/c-ares
 RUN_DEPENDS=	c-ares>=1.18.1:dns/c-ares
 
 USES=		bison cmake compiler:c++17-lang cpe gettext-runtime perl5 \
-		python shebangfix ssl
+		python:3.7+ shebangfix ssl
 
 USE_LDCONFIG=	yes
 
@@ -39,6 +39,9 @@ CMAKE_ON=	BROKER_DISABLE_DOC_EXAMPLES BROKER_DISABLE_TESTS \
 		BUILD_SHARED_LIBS BUILD_STATIC_BROKER INSTALL_AUX_TOOLS
 CMAKE_ARGS=	-DCARES_ROOT_DIR:PATH=${PREFIX} \
 		-DCMAKE_EXE_LINKER_FLAGS="${OPENSSL_LDFLAGS}" \
+		-DINSTALL_BTEST:BOOL=OFF \
+		-DINSTALL_BTEST_PCAPS:BOOL=OFF \
+		-DINSTALL_ZKG:BOOL=OFF \
 		-DPY_MOD_INSTALL_DIR:PATH=${PREFIX}/lib/zeekctl \
 		-DZEEK_ETC_INSTALL_DIR:PATH=${PREFIX}/etc \
 		-DZEEK_MAN_INSTALL_PATH=${MANPREFIX}/man \
@@ -47,21 +50,19 @@ CMAKE_ARGS=	-DCARES_ROOT_DIR:PATH=${PREFIX} \
 
 ZEEKUSER?=	zeek
 ZEEKGROUP?=	zeek
-PLIST_SUB+=	ARCH=${UNAME_M} \
-		LCASE_OPSYS=${OPSYS:tl} \
-		ZEEKGROUP=${ZEEKGROUP} \
+PLIST_SUB+=	ZEEKGROUP=${ZEEKGROUP} \
 		ZEEKUSER=${ZEEKUSER}
 
 USERS=		${ZEEKUSER}
 GROUPS=		${ZEEKGROUP}
 
-OPTIONS_DEFINE=	GEOIP2 IPSUMDUMP LBL_CF LBL_HF NETMAP PERFTOOLS SPICY ZEEKCTL \
+OPTIONS_DEFINE=	GEOIP2 IPSUMDUMP LBL_CF LBL_HF PERFTOOLS SPICY ZEEKCTL \
 		ZKG
 
 OPTIONS_SINGLE=			BUILD_TYPE
 OPTIONS_SINGLE_BUILD_TYPE=	DEBUG MINSIZEREL RELEASE RELWITHDEBINFO
 
-OPTIONS_DEFAULT=	GEOIP2 IPSUMDUMP LBL_CF LBL_HF NETMAP RELEASE ZEEKCTL \
+OPTIONS_DEFAULT=	GEOIP2 IPSUMDUMP LBL_CF LBL_HF RELEASE ZEEKCTL \
 			ZKG
 OPTIONS_DEFAULT_aarch64=	SPICY
 OPTIONS_DEFAULT_amd64=	SPICY
@@ -76,7 +77,6 @@ IPSUMDUMP_DESC=		Enables traffic summaries
 LBL_CF_DESC=		Unix time to formated time/date filter support
 LBL_HF_DESC=		Address to hostname filter support
 MINSIZEREL_DESC=	Optimizations on, debug symbols/flags off
-NETMAP_DESC=		Native Netmap Packet IOSource for Zeek
 PERFTOOLS_DESC=		Use Perftools to improve memory & CPU usage
 RELEASE_DESC=		Optimizations on, debug symbols/flags off
 RELWITHDEBINFO_DESC=	Optimizations/debug symbols on, debug flags off
@@ -91,8 +91,6 @@ IPSUMDUMP_BUILD_DEPENDS=	ipsumdump:net/ipsumdump
 IPSUMDUMP_RUN_DEPENDS=		ipsumdump:net/ipsumdump
 LBL_CF_RUN_DEPENDS=		${LOCALBASE}/bin/cf:sysutils/lbl-cf
 LBL_HF_RUN_DEPENDS=		${LOCALBASE}/bin/hf:sysutils/lbl-hf
-NETMAP_GH_TUPLE=		zeek:zeek-netmap:v2.0.0:zeek_netmap
-NETMAP_USE=			GITHUB=nodefault
 PERFTOOLS_BUILD_DEPENDS=	${LOCALBASE}/bin/perftools-pprof:devel/google-perftools
 PERFTOOLS_CMAKE_BOOL=		ENABLE_PERFTOOLS
 PERFTOOLS_RUN_DEPENDS=		${LOCALBASE}/bin/perftools-pprof:devel/google-perftools
@@ -124,10 +122,6 @@ USE_RC_SUBR=	zeek
 post-extract:
 	@${RM} -rf ${WRKSRC}/auxil/c-ares
 
-post-patch:
-	${REINPLACE_CMD} -e '\|/usr/local/|s|$$| ${STAGEDIR}${PREFIX}/|' \
-	    ${WRKSRC_zeek_netmap}/cmake/FindNetmap.cmake
-
 post-install-ZEEKCTL-on:
 	${MKDIR} ${STAGEDIR}${PREFIX}/logs
 	${MKDIR} ${STAGEDIR}${PREFIX}/spool/tmp
@@ -149,32 +143,8 @@ post-install:
 post-install-SPICY-on:
 	@${RM} -rf ${STAGEDIR}${PREFIX}/include/hilti/rt/3rdparty/SafeInt/Archive
 	@${RM} -rf ${STAGEDIR}${PREFIX}/include/hilti/rt/3rdparty/SafeInt/Test
-	@${RMDIR} ${STAGEDIR}${PREFIX}/include/zeek/builtin-plugins/spicy-plugin/bin
-	@${RMDIR} ${STAGEDIR}${PREFIX}/include/zeek/builtin-plugins/spicy-plugin/cmake
-	@${RM} -rf ${STAGEDIR}${PREFIX}/include/zeek/builtin-plugins/spicy-plugin/include
-	@${RMDIR} ${STAGEDIR}${PREFIX}/include/zeek/builtin-plugins/spicy-plugin/spicy
-	@${RM} -rf ${STAGEDIR}${PREFIX}/include/zeek/builtin-plugins/spicy-plugin/src
-	@${RM} -rf ${STAGEDIR}${PREFIX}/include/zeek/builtin-plugins/spicy-plugin/tests
-	@${RMDIR} ${STAGEDIR}${PREFIX}/include/zeek/script_opt/CPP/maint
-	@${RMDIR} ${STAGEDIR}${PREFIX}/lib/zeek-spicy/modules
 
 pre-install-ZEEKCTL-on:
 	${MKDIR} ${STAGEDIR}${PREFIX}/etc/rc.d
 
-post-install-NETMAP-on:
-	${MKDIR} ${WRKDIR}/zeek-bin
-	${CP} ${STAGEDIR}${PREFIX}/bin/zeek-config ${WRKDIR}/zeek-bin
-	${REINPLACE_CMD} -e 's|${PREFIX}|${STAGEDIR}${PREFIX}|g' \
-	    ${WRKDIR}/zeek-bin/zeek-config
-	cd ${WRKSRC_zeek_netmap} && ${SETENV} PATH=${WRKDIR}/zeek-bin:${PATH} \
-	    ./configure --with-netmap=/usr \
-	    --install-root=${STAGEDIR}${PREFIX}/lib/zeek/plugins
-	cd ${WRKSRC_zeek_netmap}/build && make && make install
-	@${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/zeek/plugins/Zeek_Netmap/lib/Zeek-Netmap.freebsd-${UNAME_M}.so
-
-.include <bsd.port.pre.mk>
-
-# Would like to use ARCH (uname -p) but it's not always correct (e.g. arm64)
-UNAME_M!=	${UNAME} -m
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
