--- a/sysutils/bacula13-server/Makefile
+++ b/sysutils/bacula13-server/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	bacula
 DISTVERSION=	13.0.1
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES?=	sysutils
 MASTER_SITES=	SF/bacula/bacula/${PORTVERSION}
 PKGNAMEPREFIX?=	#
@@ -115,12 +115,14 @@ CONFFILES=		sd dir
 
 MYSQL_CONFIGURE_ON=	--with-mysql=yes
 MYSQL_USES=		mysql
-MYSQL_SUB_LIST+=	REQ_MYSQL=mysql REQ_PGSQL=""
+MYSQL_SUB_LIST=		REQ_MYSQL=mysql
+MYSQL_SUB_LIST_OFF=	REQ_MYSQL=""
 SQLITE3_CONFIGURE_ON=	--with-sqlite3=yes
 SQLITE3_USES=		sqlite:3
 PGSQL_CONFIGURE_ON=	--with-postgresql=yes
 PGSQL_USES=		pgsql
-PGSQL_SUB_LIST+=	REQ_MYSQL="" REQ_PGSQL=postgresql
+PGSQL_SUB_LIST=		REQ_PGSQL=postgresql
+PGSQL_SUB_LIST_OFF=	REQ_PGSQL=""
 
 MTX_RUN_DEPENDS=	${LOCALBASE}/sbin/mtx:misc/mtx
 
