sysutils/tiempo: New port: Command-line time tracker

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1428,6 +1428,7 @@
     SUBDIR += testdisk
     SUBDIR += tflint
     SUBDIR += thefish
+    SUBDIR += tiempo
     SUBDIR += timelimit
     SUBDIR += timemon
     SUBDIR += tiramisu
