sysutils/xcp: New port: Extended 'cp' command

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1611,6 +1611,7 @@
     SUBDIR += xbatt
     SUBDIR += xbattbar
     SUBDIR += xcdroast
+    SUBDIR += xcp
     SUBDIR += xcpustate
     SUBDIR += xdu
     SUBDIR += xe
