--- a/x11/plasma5-plasma-integration/Makefile
+++ b/x11/plasma5-plasma-integration/Makefile
@@ -13,7 +13,7 @@ USES=		cmake compiler:c++11-lib gettext kde:5 pkgconfig qt:5 \
 USE_KDE=	auth bookmarks breeze codecs completion config configwidgets \
 		coreaddons ecm i18n iconthemes itemviews jobwidgets kio \
 		notifications service solid wayland widgetsaddons windowsystem \
-		xmlgui xdg-desktop-portal-kde \
+		xmlgui \
 		qqc2-desktop-style:run
 USE_QT=		concurrent core dbus declarative gui network quickcontrols2 \
 		wayland widgets x11extras xml \
@@ -40,6 +40,9 @@ OPTIONS_EXCLUDE_purecap=	LIGHT BIG
 .include <bsd.port.pre.mk>
 
 .if !${ABI:Mpurecap}
+# deskutils/plasma5-xdg-desktop-portal-kde requires CUPS that isn't available
+# for CheriABI.
+USE_KDE+=	xdg-desktop-portal-kde
 RUN_DEPENDS=	hack-font>=0:x11-fonts/hack-font
 .endif
 
