security/zeek: Update PORTSCOUT
According to upstream, "LTS releases will always be x.0.y"
Adjust PORTSCOUT accordingly.

--- a/security/zeek/Makefile
+++ b/security/zeek/Makefile
@@ -26,7 +26,7 @@ USE_LDCONFIG=	yes
 
 BINARY_ALIAS=	python3=${PYTHON_CMD}
 
-PORTSCOUT=	limit:0,even
+PORTSCOUT=	limit:^[0-9]*\.0\.
 
 CXXFLAGS_powerpc64=	-mpower8-vector
 
