--- a/x11-wm/sway-devel/Makefile
+++ b/x11-wm/sway-devel/Makefile
@@ -15,6 +15,8 @@ WWW?=		https://swaywm.org/
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+BROKEN=		fails to build after https://gitlab.freedesktop.org/wlroots/wlroots/-/merge_requests/4316
+
 BUILD_DEPENDS=	evdev-proto>0:devel/evdev-proto \
 		wayland-protocols>=1.24:graphics/wayland-protocols \
 		wlroots>=0.16.0.668<0.17.0:x11-toolkits/wlroots
