--- a/net/ntpd-rs/Makefile.crates
+++ b/net/ntpd-rs/Makefile.crates
@@ -1,222 +1,151 @@
-CARGO_CRATES=	addr2line-0.19.0 \
+CARGO_CRATES=	addr2line-0.21.0 \
 		adler-1.0.2 \
 		aead-0.5.2 \
 		aes-0.8.3 \
 		aes-siv-0.7.0 \
-		aho-corasick-1.0.2 \
+		aho-corasick-1.0.4 \
 		anstream-0.3.2 \
 		anstyle-1.0.1 \
 		anstyle-parse-0.2.1 \
 		anstyle-query-1.0.0 \
-		anstyle-wincon-1.0.1 \
+		anstyle-wincon-1.0.2 \
 		arbitrary-1.3.0 \
-		async-trait-0.1.68 \
+		async-trait-0.1.73 \
 		autocfg-1.1.0 \
-		backtrace-0.3.67 \
+		backtrace-0.3.69 \
 		base64-0.21.2 \
 		bitflags-1.3.2 \
+		bitflags-2.4.0 \
 		block-buffer-0.10.4 \
 		bumpalo-3.13.0 \
 		bytes-1.4.0 \
-		cc-1.0.79 \
+		cc-1.0.83 \
 		cfg-if-1.0.0 \
 		cipher-0.4.4 \
-		clap-4.3.9 \
-		clap_builder-4.3.9 \
-		clap_derive-4.3.2 \
+		clap-4.3.23 \
+		clap_builder-4.3.23 \
+		clap_derive-4.3.12 \
 		clap_lex-0.5.0 \
 		cmac-0.7.2 \
 		colorchoice-1.0.0 \
 		core-foundation-0.9.3 \
 		core-foundation-sys-0.8.4 \
-		cpufeatures-0.2.8 \
+		cpufeatures-0.2.9 \
 		crypto-common-0.1.6 \
 		ctr-0.9.2 \
 		dbl-0.3.2 \
-		debugid-0.8.0 \
 		digest-0.10.7 \
-		dtoa-1.0.6 \
-		encoding_rs-0.8.32 \
-		equivalent-1.0.0 \
-		errno-0.3.1 \
+		dtoa-1.0.9 \
+		equivalent-1.0.1 \
+		errno-0.3.2 \
 		errno-dragonfly-0.1.2 \
-		fnv-1.0.7 \
-		form_urlencoded-1.2.0 \
-		futures-channel-0.3.28 \
-		futures-core-0.3.28 \
-		futures-io-0.3.28 \
-		futures-sink-0.3.28 \
-		futures-task-0.3.28 \
-		futures-util-0.3.28 \
 		generic-array-0.14.7 \
 		getrandom-0.2.10 \
-		gimli-0.27.3 \
-		h2-0.3.20 \
-		hashbrown-0.12.3 \
+		gimli-0.28.0 \
 		hashbrown-0.14.0 \
 		heck-0.4.1 \
-		hermit-abi-0.2.6 \
-		hermit-abi-0.3.1 \
-		hex-0.4.3 \
-		hostname-0.3.1 \
-		http-0.2.9 \
-		http-body-0.4.5 \
-		httparse-1.8.0 \
-		httpdate-1.0.2 \
-		hyper-0.14.27 \
-		hyper-rustls-0.24.0 \
-		idna-0.4.0 \
-		indexmap-1.9.3 \
+		hermit-abi-0.3.2 \
 		indexmap-2.0.0 \
 		inout-0.1.3 \
-		io-lifetimes-1.0.11 \
-		ipnet-2.8.0 \
-		is-terminal-0.4.7 \
-		itoa-1.0.6 \
+		is-terminal-0.4.9 \
+		itoa-1.0.9 \
 		js-sys-0.3.64 \
 		lazy_static-1.4.0 \
 		libc-0.2.147 \
-		linux-raw-sys-0.3.8 \
+		linux-raw-sys-0.4.5 \
 		lock_api-0.4.10 \
-		log-0.4.19 \
-		match_cfg-0.1.0 \
+		log-0.4.20 \
 		matchers-0.1.0 \
 		md-5-0.10.5 \
 		memchr-2.5.0 \
-		mime-0.3.17 \
-		miniz_oxide-0.6.2 \
+		miniz_oxide-0.7.1 \
 		mio-0.8.8 \
 		nu-ansi-term-0.46.0 \
-		num_cpus-1.15.0 \
-		object-0.30.4 \
+		num_cpus-1.16.0 \
+		object-0.32.0 \
 		once_cell-1.18.0 \
 		openssl-probe-0.1.5 \
-		os_info-3.7.0 \
 		overload-0.1.1 \
 		parking_lot-0.12.1 \
 		parking_lot_core-0.9.8 \
-		percent-encoding-2.3.0 \
-		pin-project-lite-0.2.9 \
-		pin-utils-0.1.0 \
+		pin-project-lite-0.2.12 \
 		ppv-lite86-0.2.17 \
-		proc-macro2-1.0.63 \
-		prometheus-client-0.21.1 \
-		prometheus-client-derive-encode-0.4.1 \
-		quote-1.0.29 \
+		proc-macro2-1.0.66 \
+		prometheus-client-0.21.2 \
+		prometheus-client-derive-encode-0.4.2 \
+		quote-1.0.33 \
 		rand-0.8.5 \
 		rand_chacha-0.3.1 \
 		rand_core-0.6.4 \
 		redox_syscall-0.3.5 \
-		regex-1.8.4 \
+		regex-1.9.3 \
 		regex-automata-0.1.10 \
+		regex-automata-0.3.6 \
 		regex-syntax-0.6.29 \
-		regex-syntax-0.7.2 \
-		reqwest-0.11.18 \
+		regex-syntax-0.7.4 \
 		ring-0.16.20 \
 		rustc-demangle-0.1.23 \
-		rustc_version-0.4.0 \
-		rustix-0.37.20 \
-		rustls-0.20.8 \
-		rustls-0.21.2 \
+		rustix-0.38.8 \
+		rustls-0.21.6 \
 		rustls-native-certs-0.6.3 \
 		rustls-pemfile-1.0.3 \
-		rustls-webpki-0.100.1 \
-		ryu-1.0.13 \
-		schannel-0.1.21 \
-		scopeguard-1.1.0 \
+		rustls-webpki-0.101.4 \
+		ryu-1.0.15 \
+		schannel-0.1.22 \
+		scopeguard-1.2.0 \
 		sct-0.7.0 \
-		security-framework-2.9.1 \
-		security-framework-sys-2.9.0 \
-		semver-1.0.17 \
-		sentry-0.29.3 \
-		sentry-backtrace-0.29.3 \
-		sentry-contexts-0.29.3 \
-		sentry-core-0.29.3 \
-		sentry-panic-0.29.3 \
-		sentry-tracing-0.29.3 \
-		sentry-types-0.29.3 \
-		serde-1.0.164 \
-		serde_derive-1.0.164 \
-		serde_json-1.0.99 \
+		security-framework-2.9.2 \
+		security-framework-sys-2.9.1 \
+		serde-1.0.185 \
+		serde_derive-1.0.185 \
+		serde_json-1.0.105 \
 		serde_spanned-0.6.3 \
-		serde_urlencoded-0.7.1 \
 		sharded-slab-0.1.4 \
 		signal-hook-registry-1.4.1 \
-		slab-0.4.8 \
-		smallvec-1.10.0 \
-		socket2-0.4.9 \
+		smallvec-1.11.0 \
+		socket2-0.5.3 \
 		spin-0.5.2 \
 		strsim-0.10.0 \
 		subtle-2.5.0 \
-		syn-1.0.109 \
-		syn-2.0.22 \
-		thiserror-1.0.40 \
-		thiserror-impl-1.0.40 \
+		syn-2.0.29 \
+		thiserror-1.0.47 \
+		thiserror-impl-1.0.47 \
 		thread_local-1.1.7 \
-		time-0.3.22 \
-		time-core-0.1.1 \
-		time-macros-0.2.9 \
-		tinyvec-1.6.0 \
-		tinyvec_macros-0.1.1 \
-		tokio-1.29.0 \
+		tokio-1.32.0 \
 		tokio-macros-2.1.0 \
-		tokio-rustls-0.24.1 \
-		tokio-util-0.7.8 \
-		toml-0.7.5 \
+		toml-0.7.6 \
 		toml_datetime-0.6.3 \
-		toml_edit-0.19.11 \
-		tower-service-0.3.2 \
+		toml_edit-0.19.14 \
 		tracing-0.1.37 \
 		tracing-attributes-0.1.26 \
 		tracing-core-0.1.31 \
 		tracing-log-0.1.3 \
 		tracing-serde-0.1.3 \
 		tracing-subscriber-0.3.17 \
-		try-lock-0.2.4 \
 		typenum-1.16.0 \
-		uname-0.1.1 \
-		unicode-bidi-0.3.13 \
-		unicode-ident-1.0.9 \
-		unicode-normalization-0.1.22 \
+		unicode-ident-1.0.11 \
 		untrusted-0.7.1 \
-		ureq-2.7.1 \
-		url-2.4.0 \
 		utf8parse-0.2.1 \
-		uuid-1.4.0 \
 		valuable-0.1.0 \
 		version_check-0.9.4 \
-		want-0.3.1 \
 		wasi-0.11.0+wasi-snapshot-preview1 \
 		wasm-bindgen-0.2.87 \
 		wasm-bindgen-backend-0.2.87 \
-		wasm-bindgen-futures-0.4.37 \
 		wasm-bindgen-macro-0.2.87 \
 		wasm-bindgen-macro-support-0.2.87 \
 		wasm-bindgen-shared-0.2.87 \
 		web-sys-0.3.64 \
-		webpki-0.22.0 \
-		webpki-roots-0.22.6 \
-		webpki-roots-0.23.1 \
 		winapi-0.3.9 \
 		winapi-i686-pc-windows-gnu-0.4.0 \
 		winapi-x86_64-pc-windows-gnu-0.4.0 \
-		windows-sys-0.42.0 \
 		windows-sys-0.48.0 \
-		windows-targets-0.48.1 \
-		windows_aarch64_gnullvm-0.42.2 \
-		windows_aarch64_gnullvm-0.48.0 \
-		windows_aarch64_msvc-0.42.2 \
-		windows_aarch64_msvc-0.48.0 \
-		windows_i686_gnu-0.42.2 \
-		windows_i686_gnu-0.48.0 \
-		windows_i686_msvc-0.42.2 \
-		windows_i686_msvc-0.48.0 \
-		windows_x86_64_gnu-0.42.2 \
-		windows_x86_64_gnu-0.48.0 \
-		windows_x86_64_gnullvm-0.42.2 \
-		windows_x86_64_gnullvm-0.48.0 \
-		windows_x86_64_msvc-0.42.2 \
-		windows_x86_64_msvc-0.48.0 \
-		winnow-0.4.7 \
-		winreg-0.10.1 \
+		windows-targets-0.48.5 \
+		windows_aarch64_gnullvm-0.48.5 \
+		windows_aarch64_msvc-0.48.5 \
+		windows_i686_gnu-0.48.5 \
+		windows_i686_msvc-0.48.5 \
+		windows_x86_64_gnu-0.48.5 \
+		windows_x86_64_gnullvm-0.48.5 \
+		windows_x86_64_msvc-0.48.5 \
+		winnow-0.5.14 \
 		zeroize-1.6.0
