x11/libinput: drop unused USES=tar
USE_GITLAB (and USE_GITHUB) override USES=tar.

PR:		273343
Approved by:	manu

--- a/x11/libinput/Makefile
+++ b/x11/libinput/Makefile
@@ -16,7 +16,7 @@ LIB_DEPENDS=	libevdev.so:devel/libevdev \
 		libudev.so:devel/libudev-devd \
 		libmtdev.so:devel/libmtdev
 
-USES=		cpe localbase meson pkgconfig python:run shebangfix tar:bz2
+USES=		cpe localbase meson pkgconfig python:run shebangfix
 USE_LDCONFIG=	yes
 
 USE_GITLAB=	yes
