sysutils/plasma5-kinfocenter: disable Polkit for CheriABI
devel/kf5-kauth doesn't include Polkit support for CheriABI.

--- a/sysutils/plasma5-kinfocenter/Makefile
+++ b/sysutils/plasma5-kinfocenter/Makefile
@@ -25,8 +25,9 @@ USE_XORG=	ice sm x11 xext
 # TODO	-- this should be handled correctly...
 LDFLAGS+=-ldevinfo
 
-OPTIONS_DEFINE=		DOCS
-OPTIONS_DEFAULT=	DOCS
+OPTIONS_DEFINE=		DOCS POLKIT
+OPTIONS_DEFAULT=	DOCS POLKIT
+OPTIONS_EXCLUDE_purecap=	POLKIT
 OPTIONS_SUB=		yes
 
 DOCS_EXTRA_PATCHES_OFF= ${PATCHDIR}/cheribsd-docs.patch
