graphics/mesa-devel: update to 23.2.0.b.2949
Changes:	https://gitlab.freedesktop.org/mesa/mesa/-/compare/75789e9429d...5ce6e09ffc7

--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	23.2.0-branchpoint-2866
-DISTVERSIONSUFFIX=	-g75789e9429d
+DISTVERSION=	23.2.0-branchpoint-2949
+DISTVERSIONSUFFIX=	-g5ce6e09ffc7
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
