--- a/devel/py-libtmux/Makefile
+++ b/devel/py-libtmux/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	libtmux
-PORTVERSION=	0.22.1
+PORTVERSION=	0.23.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -11,8 +11,7 @@ WWW=		https://github.com/tmux-python/libtmux
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR} \
-		${PY_SETUPTOOLS}
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR}
 RUN_DEPENDS=	tmux:sysutils/tmux
 
 USES=		python
