--- a/devel/py-libtmux/Makefile
+++ b/devel/py-libtmux/Makefile
@@ -1,5 +1,7 @@
 PORTNAME=	libtmux
 PORTVERSION=	0.23.0
+DISTVERSIONSUFFIX=	.post0
+PORTREVISION=	1
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
