devel/shflags: Add make test

--- a/devel/shflags/Makefile
+++ b/devel/shflags/Makefile
@@ -10,6 +10,12 @@ WWW=		https://github.com/kward/shflags
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+TEST_DEPENDS=	bash:shells/bash \
+		dash:shells/dash \
+		ksh93:shells/ksh \
+		mksh:shells/mksh \
+		zsh:shells/zsh
+
 NO_ARCH=	yes
 NO_BUILD=	yes
 
@@ -18,7 +24,13 @@ PLIST_FILES=	lib/shflags
 GH_ACCOUNT=	kward
 USE_GITHUB=	yes
 
+post-patch:
+	@${REINPLACE_CMD} -e 's|%%LOCALBASE%%|${LOCALBASE}|g' ${WRKSRC}/test_runner
+
 do-install:
 	${INSTALL_DATA} ${WRKSRC}/shflags ${STAGEDIR}${PREFIX}/lib/
+
+do-test:
+	cd ${WRKSRC} && ${SH} test_runner
 
 .include <bsd.port.mk>
