devel/py-regress: Add py-regress 0.4.0
regress is a backtracking regular expression engine implemented in Rust, which
targets JavaScript regular expression syntax.

It's fast, Unicode-aware, has few dependencies, and has a big test suite. It
makes fewer guarantees than the regex crate but it enables more syntactic
features, such as backreferences and lookaround assertions.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5479,6 +5479,7 @@
     SUBDIR += py-rednose
     SUBDIR += py-reedsolo
     SUBDIR += py-referencing
+    SUBDIR += py-regress
     SUBDIR += py-remote-pdb
     SUBDIR += py-repoze.lru
     SUBDIR += py-repoze.sphinx.autointerface
