--- a/www/Makefile
+++ b/www/Makefile
@@ -1664,6 +1664,7 @@
     SUBDIR += py-google-api-python-client
     SUBDIR += py-google-cloud-appengine-logging
     SUBDIR += py-google-cloud-audit-log
+    SUBDIR += py-google-cloud-bigquery
     SUBDIR += py-google-cloud-bigtable
     SUBDIR += py-google-cloud-core
     SUBDIR += py-google-cloud-datastore
