devel/py-querystring-parser: New port: QueryString parser for Python/Django

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5460,6 +5460,7 @@
     SUBDIR += py-qt6-sip
     SUBDIR += py-qtbuilder
     SUBDIR += py-qtconsole
+    SUBDIR += py-querystring-parser
     SUBDIR += py-questionary
     SUBDIR += py-qutip
     SUBDIR += py-qutip-qip
