cad/gdstk: New port: C++ library for creation and manipulation of GDSII and OASIS files

--- a/cad/Makefile
+++ b/cad/Makefile
@@ -38,6 +38,7 @@
     SUBDIR += gds3d
     SUBDIR += gdscpp
     SUBDIR += gdsreader
+    SUBDIR += gdstk
     SUBDIR += gdt
     SUBDIR += geda
     SUBDIR += gerbv
