security/pam-modules: Fix build with LLVM15, assume maintainership
Fix:

pam_innetgr.c:134:16: error: incompatible function pointer types passing 'int (char *, int)' to parameter of type 'int (*)(char *, size_t)' (aka 'int (*)(char *, unsigned long)') [-Wincompatible-function-pointer-types]
                if (xgetname(getdomainname, &domainname)) {
                             ^~~~~~~~~~~~~
pam_innetgr.c:65:16: note: passing argument to parameter 'getfn' here
xgetname(int (*getfn)(char *, size_t), char **storage)
               ^
1 warning and 1 error generated.
*** [pam_innetgr.lo] Error code 1

While at it assume maintainership.

--- a/security/pam-modules/Makefile
+++ b/security/pam-modules/Makefile
@@ -3,7 +3,7 @@ PORTVERSION=	2.5
 CATEGORIES=	security
 MASTER_SITES=	ftp://download.gnu.org.ua/pub/release/pam-modules/
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	cy@FreeBSD.org
 COMMENT=	Collection of modules for PAM
 WWW=		https://puszcza.gnu.org.ua/software/pam-modules/pam-modules.html
 
