devel/libjodycode: Add new port
libjodycode is a library containing code shared among several of the programs
written by Jody Bruchon such as imagepile, jdupes, winregfs, and zeromerge.

WWW: https://github.com/jbruchon/libjodycode

PR:		273400

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1292,6 +1292,7 @@
     SUBDIR += libisofs
     SUBDIR += libixp
     SUBDIR += libjitterentropy
+    SUBDIR += libjodycode
     SUBDIR += libk8055
     SUBDIR += libkiwix
     SUBDIR += libklel
