--- a/x11-wm/gamescope/Makefile
+++ b/x11-wm/gamescope/Makefile
@@ -22,8 +22,7 @@ BUILD_DEPENDS=	glslangValidator:graphics/glslang \
 		wayland-protocols>=1.17:graphics/wayland-protocols \
 		hwdata>0:misc/hwdata \
 		wlroots>=0.16.0<0.17.0:x11-toolkits/wlroots
-LIB_DEPENDS=	libepoll-shim.so:devel/libepoll-shim \
-		libdrm.so:graphics/libdrm \
+LIB_DEPENDS=	libdrm.so:graphics/libdrm \
 		libliftoff.so:graphics/libliftoff \
 		libvulkan.so:graphics/vulkan-loader \
 		libwayland-server.so:graphics/wayland \
