--- a/x11/swayimg/Makefile
+++ b/x11/swayimg/Makefile
@@ -29,7 +29,7 @@ PLIST_FILES=	bin/${PORTNAME} \
 		share/icons/hicolor/64x64/apps/${PORTNAME}.png \
 		${NULL}
 
-# XXX Drop after FreeBSD 13.* EOL around 2026-01-31
+# XXX Drop after FreeBSD 13.4 EOL around 2026-01-31
 # https://cgit.freebsd.org/src/commit/?id=af93fea71038
 .if !exists(/usr/include/sys/timerfd.h)
 LIB_DEPENDS+=	libepoll-shim.so:devel/libepoll-shim
