deskutils/mytetra: new port had been added (+)
MyTetra is advanced graphical manager for information
collecting and organizing written with C++/Qt5.

--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -183,6 +183,7 @@
     SUBDIR += mindforger
     SUBDIR += moregroupware
     SUBDIR += mozo
+    SUBDIR += mytetra
     SUBDIR += nautilus-sendto
     SUBDIR += nextcloudclient
     SUBDIR += note
