--- a/devel/py-setuptools/Makefile
+++ b/devel/py-setuptools/Makefile
@@ -6,6 +6,9 @@ MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DIST_SUBDIR=	python
 
+BROKEN_purecap=	requires missing CheriABI Python
+USE_PKG64=	1
+
 # note: before committing to this port, contact portmgr to arrange for an
 # experimental ports run.  Untested commits may be backed out at portmgr's
 # discretion.
